# prime-documentary

./: .env.example  .gitignore  AGENTS.md  BOOTSTRAP_PROMPT.txt  CLAUDE.md  HANDOFF.md  Makefile  PACKAGE_MANIFEST.md  PACKAGE_MANIFEST_V2.md  PD_AUTONOMOUS_STUDIO_MASTER_SPEC_V2.md  PD_CLAUDE_CODE_MASTER_BLUEPRINT.md  README.md  START_HERE.md  VALIDATION_REPORT.md  VALIDATION_REPORT_V2.md  VERSION.md  pyproject.toml  requirements-dev.txt
.claude/: settings.example.json  settings.json  settings.v2.example.json
backlog/: EPIC-01-foundation.md  EPIC-02-research-script-vertical.md  EPIC-03-visual-generation.md  EPIC-04-audio.md  EPIC-05-editing.md  EPIC-06-approval-publish.md  EPIC-07-analytics-learning.md  EPIC-08-production-l3.md  README.md
config/: pd.example.yaml  pd.v2.example.yaml
contracts/: 01-topic-screening.md  02-research.md  03-thesis-outline.md  04-script.md  05-scenes.md  06-visuals.md  07-audio.md  08-edit.md  09-package.md  10-publish.md  11-analytics.md  README.md
decisions/: 0001-PD_STRATEGY_AND_SCOPE.md  0002-FIRST_CHANNEL_COURT_CASE_FORMAT.md  0003-SECOND_CHANNEL_PINO_MONEY.md  0003-feature-duration-profile.md  0004-EPISODE_QUALITY_STANDARD.md  0005-PACKAGING_STANDARD.md  0006-GROWTH_LEVERS.md  0007-QUALITY_AUTOMATION_LEVERS.md  0008-mid-duration-profile.md
docs/: 00_PROJECT_CONTEXT.md  01_AUTONOMY_AND_ARCHITECTURE.md  02_END_TO_END_PIPELINE.md  03_TOPIC_AND_PORTFOLIO_SYSTEM.md  04_RESEARCH_FACT_CHECK_AND_CITATION.md  05_SCRIPT_STORY_AND_ENGLISH_STYLE.md  06_VISUAL_SYSTEM_SDXL_AND_CONTINUITY.md  07_AUDIO_NARRATION_MUSIC_AND_MIX.md  (+58 more)
(+1309 files in other folders)
